@@ -7,7 +7,8 @@ void func_stringp(string*)
 void func_enum(enum (RED=0,GREEN=1,BLUE=2,CHARTREUSE=3,PETUNIA=4))
 void func_short(short,short)
 void func_ushort(ushort, ushort)
-void func_float(float,float)
+float func_float(float,float)
+double func_double(double,double)
 typedef color = enum (RED=0,GREEN=1,BLUE=2,CHARTREUSE=3,PETUNIA=4)
 void func_typedef(color)
 void func_arrayi(array(int,arg2)*,void)
